Fixed some repeated lines and top margin for infowindow to prevent error message from being cut off

--- a/css/main.css
+++ b/css/main.css
@@ -44,17 +44,8 @@ li {
     font: 12px sans-serif;
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-#map {
-    height: 100%;
-}
-
 #content {
+    margin-top: 10px;
     line-height: 50%;
     height: 225px;
     width: 325px;
